--- a/the_plan.html
+++ b/the_plan.html
@@ -12,7 +12,7 @@
 <ul>
   <li><a href="index.html">About</a></li>
   <li><a href="the_plan.html">The Plan</a></li>
-  <li><a href="studentprofile.html">Student Profile</a></li>
+  <li><a href="studentprofiles.html">Student Profile</a></li>
   <li><a href="https://www.gofundme.com/djbga45n">Fund Us</a></li>
 </ul>
 ​
